--- a/Football_Scores-master/app/src/main/res/values/strings.xml
+++ b/Football_Scores-master/app/src/main/res/values/strings.xml
@@ -8,11 +8,10 @@
     <string name="today">Today</string>
     <string name="yesterday">Yesterday</string>
     <string name="tomorrow">Tomorrow</string>
-    <string name="champions_league">UEFA Champions League</string>
-    <string name="bundesliga">Bundesliga</string>
-    <string name="premierleague">Premier League</string>
-    <string name="primeradivison">Primera Division</string>
-    <string name="seriaa">Serie A</string>
+    <string name="champions_league" translatable="false">UEFA Champions League</string>
+    <string name="premierleague" translatable="false">Premier League</string>
+    <string name="primeradivison" translatable="false">Primera Division</string>
+    <string name="seriea" translatable="false">Serie A</string>
     <string name="matchday_text">Match day</string>
     <string name="group_stage_text">Group stages</string>
     <string name="first_knockout_round">First knockout round</string>
@@ -47,4 +46,11 @@
     <string name="score" translatable="false">Scores</string>
     <string name="date" translatable="false">Date</string>
     <string name="empty" translatable="false">Empty</string>
+
+    <string name="bundesliga" translatable="false">Bundesliga</string>
+    <string name="ligue1" translatable="false">Ligue 1</string>
+    <string name="eredivisie" translatable="false">Eredivisie</string>
+    <string name="no_league_found" translatable="false">Not known League Please report</string>
+
+
 </resources>
